# configs

./: .Xdefaults  .Xdefaults.miguel  .Xresources  .bash_profile  .bashrc  .gitconfig  .gitignore  .hgrc  .prompt  .prompt_bash  .prompt_zsh  .tmux.conf  .vimrc  .xinitrc-enlightenment  .xinitrc-fluxbox  .xinitrc-wmii  .zsh_prompt  .zshrc  AGENTS.md  README  configuration-acer4810.nix  configuration.nix  debian-pkgs-dev-env.txt  doas.conf  i3status-rs-config.toml  icewall  id_ed25519.pub  id_rsa.pub  install.py  install_antigen.sh  install_vundle.sh  margiehamilton.nix  vim-plug-for-neovim.sh
.irssi/: config
.old-xinitrcs/: .xinitrc-wmaker  .xinitrc-xmonad
.ssh/: config
.vim/: README  badwhitespace.vim  init.vim  python.vim  syntax.vim
.wmii-3.5/: rc.wmii  wmiirc
.xmonad/: cpubar.sh  dzen.sh  stalonetrayrc  status.sh  volume-bar.sh  xmobarrc  xmonad.desktop  xmonad.hs  xmonad.start
ai-agents/: .gitignore  CLAUDE.md
ansible/: cluster.yml  grafana-cmdline  influxdb-cmdline  podman-grafana.service  podman-influxdb.service
awesome/: rc.lua
code/: InterestCalc.java  IterIter.java  Semaphore.cs  SmartQueue.cs  cache_arc.py  cache_lru.py  countcpus.c  cpu_bind.c  crdbtest-run.sh  euler_project.c  get_bons_rapazes.py  get_bons_rapazes_podcasts.pl  llama-fim-setup.sh  llama-fim.service  mem.c  my.cnf2  pgtest-run.sh  postgresql.conf  sizes.c  ycsb-workload-blockchain-ingestion
code/rust/: Cargo.toml
code/rust/src/: main.rs
nixos/: acer4810-hw-config.nix  acer4810.nix  configuration.nix  grafana-alfeizerao-energy-dashboard.json  hardware-configuration.nix  (+10 more)
(+187 files in other folders)
